fix guard spinner scrollbar

--- a/frontend/src/css/theme.css
+++ b/frontend/src/css/theme.css
@@ -534,8 +534,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .loading-container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
